// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error messages renders error message successfully 1`] = `
<div
  className=" css-fzm5ub-ErrorMessage"
>
  <div
    className="error-message css-fzm5ub-ErrorMessage"
  >
    <p>
      Some error occurred.
    </p>
  </div>
</div>
`;

exports[`Error messages renders page internal error successfully 1`] = `
<div
  className="status-container css-xdwhvj-PageInternalError"
>
  <h1
    className="status-code"
  >
    500 Internal Server Error
  </h1>
  <p
    className="status-text"
  >
    The server encountered an internal error and was unable to complete your request.
  </p>
</div>
`;

exports[`Error messages renders page not found successfully 1`] = `
<div
  className="status-container css-8zetg9-PageNotFound"
>
  <h1
    className="status-code"
  >
    404 Page Not Found
  </h1>
  <p
    className="status-text"
  >
    The page you are looking for does not exist.
  </p>
</div>
`;
